--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "0.1.0",
   "private": true,
   "name": "pubApp",
-  "author": "Child of Satan, Alex Moore",
+  "author": "Kris Lee, Alex Moore",
   "repository": {
     "type": "git",
     "url": "https://github.com/Oritechnology/pubApp.git"
