--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "deploy-heroku": "bin/deploy-heroku.sh",
     "lint": "esw . --ignore-path .gitignore --ext '.js,.jsx'",
     "lint-watch": "npm run lint -- -w",
-    "prepush": "npm run lint && npm run test-node"
+    "prepush": "npm run test-node"
   },
   "license": "MIT",
   "bugs": {
